--- a/index.html
+++ b/index.html
@@ -29,39 +29,145 @@
 					<nav id="header-menu" class="header__menu">
 						<ul class="header__list">
 							<li>
-								<a href="#" class="header__link">
-									О Школе
-								</a>
+								<a href="#" class="header__link">О Школе</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Документы
-								</a>
+								<a href="#" class="header__link">Документы</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Правила и  положения
-								</a>
+								<a href="#" class="header__link">Правила и  положения</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Новости
-								</a>
+								<a href="#" class="header__link">Новости</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Полезная информация
-								</a>
+								<a href="#" class="header__link">Полезная информация</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Галерея
-								</a>
+								<a href="#" class="header__link">Галерея</a>
+								<ul class="sub-menu__list">
+									<li>
+										<a href="#" class="sub-menu__link">Основные сведения</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Об учредителе</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Структура организации</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Руководство</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Кадровый состав</a>
+									</li>
+									<li>
+										<a href="#" class="sub-menu__link">Материально-техническое обеспечение</a>
+									</li>
+								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">
-									Контакты
-								</a>
+								<a href="#" class="header__link">Контакты</a>
 							</li>
 						</ul>
 					</nav>
