--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<ul class="header__list">
 							<li>
 								<a href="#" class="header__link">О Школе</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
@@ -53,6 +54,7 @@
 							</li>
 							<li>
 								<a href="#" class="header__link">Документы</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
@@ -76,6 +78,7 @@
 							</li>
 							<li>
 								<a href="#" class="header__link">Правила и  положения</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
@@ -99,6 +102,7 @@
 							</li>
 							<li>
 								<a href="#" class="header__link">Новости</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
@@ -122,6 +126,7 @@
 							</li>
 							<li>
 								<a href="#" class="header__link">Полезная информация</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
@@ -145,6 +150,7 @@
 							</li>
 							<li>
 								<a href="#" class="header__link">Галерея</a>
+								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
