--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
 							<li>
 								<a href="#" class="header__link">Галерея</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-last">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
