--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
 						</div>
 						<div class="header__description">
 							<span>Школа «Тодес»</span>
-							<p>Муниципальное бюджетное учреждение «Спортивная школа олимпийского резерва «Тодес» города Челябинска</p>
+							<p>Муниципальное бюджетное учреждение «Спортивная школа олимпийского резерва «Тодес» города
+								Челябинска</p>
 						</div>
 					</a>
 					<nav id="header-menu" class="header__menu">
@@ -77,7 +78,7 @@
 								</ul>
 							</li>
 							<li>
-								<a href="#" class="header__link">Правила и  положения</a>
+								<a href="#" class="header__link">Правила и положения</a>
 								<span class="arrow"></span>
 								<ul class="sub-menu__list">
 									<li>
@@ -197,7 +198,110 @@
 		</main>
 
 		<footer class="footer">
-
+			<div class="container">
+				<div class="footer__body">
+					<div class="footer__flex-row">
+						<div class="footer__column footer__column-logo">
+							<div class="footer__logo">
+								<img src="img/footer/logo-todes.png" alt="">
+							</div>
+							<div class="footer__item">
+								<div class="footer__subtitle">
+									Телефон/Факс:
+								</div>
+								<div class="footer__text">
+									<a href="tel:+73517277804" class="footer__phone">(351) 727-78-04</a>
+								</div>
+							</div>
+							<div class="footer__item">
+								<div class="footer__subtitle">
+									Электронный адрес:
+								</div>
+								<div class="footer__text">
+									<a href="mailto:chelskate@mail.ru" class="footer__phone">chelskate@mail.ru</a>
+								</div>
+							</div>
+						</div>
+						<div class="footer__column footer__column-descriptor">
+							<div class="footer__item">
+								<div class="footer__text footer__descriptor">
+									Муниципальное бюджетное учреждение «Спортивная школа олимпийского резерва «Тодес»
+									города
+									Челябинска
+								</div>
+							</div>
+							<div class="footer__item">
+								<div class="footer__subtitle">
+									Юридический адрес:
+								</div>
+								<div class="footer__text">
+									Россия, 454007, Челябинская область, г. Челябинск, ул. Савина, 1
+								</div>
+							</div>
+						</div>
+						<div class="footer__column">
+							<div class="footer__item">
+								<div class="footer__subtitle">
+									Фактический адрес:
+								</div>
+								<div class="footer__text">
+									<p>
+										Россия, 454091, Челябинская область, г. Челябинск, Свердловский проспект, 51
+									</p>
+									<p>
+										Россия, 454080, Челябинская область, г. Челябинск, ул. Труда, 187 а
+									</p>
+									<p>
+										Россия, 454007, Челябинская область, г. Челябинск, ул.Савина, 1
+									</p>
+								</div>
+							</div>
+						</div>
+						<div class="footer__column">
+							<nav class="footer__list">
+								<li>
+									<a href="#" class="footer__link">О школе</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Документы</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Правила и положения</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Новости</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Полезная информация</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Галерея</a>
+								</li>
+								<li>
+									<a href="#" class="footer__link">Контакты</a>
+								</li>
+							</nav>
+						</div>
+					</div>
+					<div class="footer__bottom">
+						<div class="footer__description">
+							© Муниципальное бюджетное учреждение дополнительного образования детей «Специализированная
+							детско-юношеская спортивная школа олимпийского резерва по фигурному катанию на коньках
+							«Тодес» города Челябинска
+						</div>
+						<div class="footer__developer">
+							<div class="footer__dev-name">
+								Разработка сайта <a href="https://creatizer.ru/"> Creatizer</a>
+							</div>
+							<div class="footer__dev-logo">
+								<a href="https://creatizer.ru/">
+									<img src="img/footer/creatizer-logo.png" alt="">
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</footer>
 	</div>
 
