--- a/index.html
+++ b/index.html
@@ -205,7 +205,10 @@
 							<div class="footer__logo">
 								<img src="img/footer/logo-todes.png" alt="">
 							</div>
-							<div class="footer__item">
+							<div class="footer__mobile-button">
+								Показать подробнее
+							</div>
+							<div class="footer__item _hidden-element">
 								<div class="footer__subtitle">
 									Телефон/Факс:
 								</div>
@@ -213,7 +216,7 @@
 									<a href="tel:+73517277804" class="footer__phone">(351) 727-78-04</a>
 								</div>
 							</div>
-							<div class="footer__item">
+							<div class="footer__item _hidden-element">
 								<div class="footer__subtitle">
 									Электронный адрес:
 								</div>
@@ -222,7 +225,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="footer__column footer__column-descriptor">
+						<div class="footer__column footer__column-descriptor _hidden-element">
 							<div class="footer__item">
 								<div class="footer__text footer__descriptor">
 									Муниципальное бюджетное учреждение «Спортивная школа олимпийского резерва «Тодес»
@@ -239,7 +242,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="footer__column">
+						<div class="footer__column _hidden-element">
 							<div class="footer__item">
 								<div class="footer__subtitle">
 									Фактический адрес:
@@ -257,7 +260,7 @@
 								</div>
 							</div>
 						</div>
-						<div class="footer__column">
+						<div class="footer__column _hidden-element">
 							<nav class="footer__list">
 								<li>
 									<a href="#" class="footer__link">О школе</a>
