--- a/index.html
+++ b/index.html
@@ -206,7 +206,8 @@
 								<img src="img/footer/logo-todes.png" alt="">
 							</div>
 							<div class="footer__mobile-button">
-								Показать подробнее
+								<span class="show-info">Показать подробнее</span>
+								<span class="hide-info">Скрыть информацию</span>
 							</div>
 							<div class="footer__item _hidden-element">
 								<div class="footer__subtitle">
