--- a/index.html
+++ b/index.html
@@ -194,7 +194,59 @@
 			</div>
 		</div>
 		<main class="main">
-
+			<div class="mainscreen">
+				<div class="mainscreen__slider">
+					<div class="mainscreen__slider-item">
+						<img src="img/mainscreen/01.jpg" alt="">
+						<div class="item-wrap">
+							<h1 class="mainscreen__title">
+								Приветствуем всех посетителей нашего сайта!
+							</h1>
+							<div class="mainscreen__text">
+								Сегодня в школе подготовкой будущих фигуристов (а это более 250 юных спортсменов в возрасте от 6 лет) занимаются 16 тренеров, из которых 5 имеют высшую квалификационную категорию.
+							</div>
+							<div class="mainscreen__button-wrap">
+								<a href="#about" class="mainscreen__button button">
+									Подробнее о школе
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="mainscreen__slider-item">
+						<img src="img/mainscreen/test-big.jpg" alt="">
+						<div class="item-wrap">
+							<h1 class="mainscreen__title">
+								ТУТ КАРТИНКА В 4К
+							</h1>
+							<div class="mainscreen__text">
+								И очень мало текста
+							</div>
+							<div class="mainscreen__button-wrap">
+								<a href="#about" class="mainscreen__button button">
+									Подробнее о школе
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="mainscreen__slider-item">
+						<img src="img/mainscreen/test-small.jpg" alt="">
+						<div class="item-wrap">
+							<h1 class="mainscreen__title">
+								А тут картинка 640 х 427
+							</h1>
+							<div class="mainscreen__text">
+								И ОООООООООООЧЕНЬ МНОГО текста
+								<p>Lorem, nsequatur a a doloreatsint, rem quisquam cupiditate modi. Nulla labore quaerat similique autem numquam rem! Incidunt fugit a dicta facilis laboriosam quisquam, necessitatibus, minima provident sint obcarro. Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia voluptas deserunt voluptatum voluptatibus eveniet culpa ad.</p>
+							</div>
+							<div class="mainscreen__button-wrap">
+								<a href="#about" class="mainscreen__button button">
+									Подробнее о школе
+								</a>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer class="footer">
