--- a/index.html
+++ b/index.html
@@ -247,6 +247,31 @@
 					</div>
 				</div>
 			</div>
+			<div class="bluebar">
+				<div class="bluebar__body">
+					<div class="bluebar__title">
+						Наши направления
+					</div>
+					<a href="#" class="bluebar__type">
+						<div class="bluebar__subtitle">
+							Одиночное
+						</div>
+						<div class="bluebar__text">
+							Мужское/Женское
+						</div>
+					</a>
+					<a href="#" class="bluebar__type">
+						<div class="bluebar__subtitle">
+							Парное катание
+						</div>
+					</a>
+					<a href="#" class="bluebar__type">
+						<div class="bluebar__subtitle">
+							Синхронное катание
+						</div>
+					</a>
+				</div>
+			</div>
 		</main>
 
 		<footer class="footer">
