--- a/index.html
+++ b/index.html
@@ -272,6 +272,36 @@
 					</a>
 				</div>
 			</div>
+			<div class="articles">
+				<div class="container">
+					<div class="articles__body">
+						<div class="articles__item">
+							<a href="#" class="articles__image">
+								<img src="img/articles/01.jpg" alt="">
+							</a>
+							<a href="#" class="articles__link">
+								Сведения об организации
+							</a>
+						</div>
+						<div class="articles__item">
+							<a href="#" class="articles__image">
+								<img src="img/articles/02.jpg" alt="">
+							</a>
+							<a href="#" class="articles__link">
+								Календарь соревнований
+							</a>
+						</div>
+						<div class="articles__item">
+							<a href="#" class="articles__image">
+								<img src="img/articles/03.jpg" alt="">
+							</a>
+							<a href="#" class="articles__link">
+								Полезная информация
+							</a>
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer class="footer">
