--- a/index.html
+++ b/index.html
@@ -302,6 +302,34 @@
 					</div>
 				</div>
 			</div>
+			<div id="about" class="about">
+				<div class="about__body">
+					<div class="about__top">
+						<div class="about__image">
+							<img src="img/about/01.jpg" alt="">
+						</div>
+						<div class="about__info">
+							<div class="about__title">
+								Информация о МБУ СШОР «Тодес» г. Челябинска
+							</div>
+							<div class="about__text">
+								Муниципальное бюджетное учреждение «Спортивная школа олимпийского резерва «Тодес» города Челябинска действует на основании  Приказа Министерства спорта Российской Федерации от 19 января 2018 г. № 38 «Об утверждении Федерального стандарта спортивной подготовки по виду спорта фигурное катание на коньках»; Приказа Министерства спорта Российской Федерации от 30 октября 2015г. № 999 «Об утверждении требований к обеспечению подготовки спортивного резерва для спортивных команд Российской Федерации»; Федерального закона от 4 декабря 2007 года № 329- ФЗ «О физической культуре и спорте в Российской Федерации»; Устава МБУ СШОР «Тодес» г.Челябинска; Трудового кодекса РФ и программы спортивной подготовки по фигурному катанию на коньках МБУ СШОР «Тодес» г.Челябинска.
+							</div>
+							<div class="about__button-container">
+								<a href="#" class="about__button button">
+									Узнать больше
+								</a>
+							</div>
+						</div>
+					</div>
+					<div class="about__bottom">
+						<div class="about__icon"></div>
+						<div class="about__mission">
+							Если говорить о школе в целом, то у всех у нас одна задача – формировать в Челябинске здоровое поколение девчонок и мальчишек!
+						</div>
+					</div>
+				</div>
+			</div>
 		</main>
 
 		<footer class="footer">
