--- a/index.html
+++ b/index.html
@@ -330,6 +330,35 @@
 					</div>
 				</div>
 			</div>
+			<div class="news">
+				<div class="container">
+					<div class="news__body">
+						<div class="news__slider">
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__hover">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+			<div class="schedule">
+				<a href="#" class="schedule__button button">
+					посмотреть расписание тренировок
+				</a>
+			</div>
 		</main>
 
 		<footer class="footer">
