--- a/index.html
+++ b/index.html
@@ -341,7 +341,119 @@
 								<div class="news__date">
 									03 октября 2020
 								</div>
-								<div class="news__hover">
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Проводится просмотр в группу синхронного катания девочек не моложе 8 лет
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt auctor arcu sit amet malesuada ...
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt auctor arcu sit amet malesuada ...
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Проводится просмотр в группу синхронного катания девочек не моложе 8 лет
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt auctor arcu sit amet malesuada ...
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
+									<div class="news__subtitle">
+										Новости и мероприятия
+									</div>
+									<a href="#" class="news__link">
+										Смотреть все
+									</a>
+								</div>
+							</div>
+							<div class="news__slider-item">
+								<div class="news__text">
+									Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam tincidunt auctor arcu sit amet malesuada ...
+								</div>
+								<div class="news__date">
+									03 октября 2020
+								</div>
+								<div class="news__first-slide">
 									<div class="news__subtitle">
 										Новости и мероприятия
 									</div>
