--- a/list.html
+++ b/list.html
@@ -32,7 +32,7 @@
 							<li>
 								<a href="#" class="header__link">О Школе</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -56,7 +56,7 @@
 							<li>
 								<a href="#" class="header__link">Документы</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -80,7 +80,7 @@
 							<li>
 								<a href="#" class="header__link">Правила и положения</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -104,7 +104,7 @@
 							<li>
 								<a href="#" class="header__link">Новости</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -128,7 +128,7 @@
 							<li>
 								<a href="#" class="header__link">Полезная информация</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list">
+								<ul class="sub-menu__list sub-menu__list-subordinate">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -152,7 +152,7 @@
 							<li>
 								<a href="#" class="header__link">Галерея</a>
 								<span class="arrow"></span>
-								<ul class="sub-menu__list sub-menu__list-last">
+								<ul class="sub-menu__list sub-menu__list-subordinate sub-menu__list-last">
 									<li>
 										<a href="#" class="sub-menu__link">Основные сведения</a>
 									</li>
@@ -193,7 +193,7 @@
 				</div>
 			</div>
 		</div>
-		<main class="main">
+		<main class="main main-subordinate">
 			<div class="top">
 				<div class="container">
 					<div class="top__body">
@@ -205,10 +205,187 @@
 								Главная
 							</a>
 							<span> / </span>
-							<a href="news.html" class="top__link">
+							<a href="list.html" class="top__link">
 								Новости
 							</a>
 						</div>
+					</div>
+				</div>
+			</div>
+			<div class="content">
+				<div class="container">
+					<div class="content__body">
+						<aside class="aside">
+							<div class="aside__item">
+								<div class="aside__image">
+									<img src="img/list/bg-schedule.png" alt="">
+								</div>
+								<div class="aside__subtitle">
+									Расписание тренировок
+								</div>
+								<div class="aside__button-container">
+									<a href="#" class="aside__button button">Посмотреть</a>
+								</div>
+							</div>
+							<div class="aside__item">
+								<div class="aside__image">
+									<img src="img/list/bg-calendar.png" alt="">
+								</div>
+								<div class="aside__subtitle">
+									Календарь соревнований и выступлений
+								</div>
+								<div class="aside__button-container">
+									<a href="#" class="aside__button button">Посмотреть</a>
+								</div>
+							</div>
+							<nav class="aside__fast-links">
+								<div class="aside__fast-links-title">
+									Быстрые ссылки
+								</div>
+								<ul class="aside__list">
+									<li>
+										<a href="#" class="aside__link">
+											О нас
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Платные услуги
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Галерея
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Страница родителей
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Поздравления
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Документы
+										</a>
+									</li>
+									<li>
+										<a href="#" class="aside__link">
+											Как поступить в школу
+										</a>
+									</li>
+								</ul>
+							</nav>
+						</aside>
+						<div class="content__main">
+							<div class="content__event event">
+								<div class="event__genre">
+									Новости
+								</div>
+								<a href="#" class="event__title">
+									Госуслуги стали доступнее
+								</a>
+								<div class="event__date">
+									22.11.2018 18:02:40
+								</div>
+								<div class="event__text">
+									В едином каталоге можно заказать любую услугу, что теперь доступно не только обычным
+									пользователям, но также юридическим лицам и предпринимателям. Причем, мобильная
+									версия портала поможет воспользоваться его возможностями со смартфонов и планшетов.
+									Через личный кабинет предприниматели или юридические лица могут заказать электронные
+									услуги для бизнеса, оплачивать налоги и госпошлины, добавлять сотрудников и
+									информацию о транспортных средствах. А в личном кабинете для юридических лиц и
+									предпринимателей появились обновления: теперь там отображается важная для бизнеса
+									информация о реквизитах, филиалах, сотрудниках, корпоративном транспорте и проверках
+									контрольно-надзорных органов.
+								</div>
+							</div>
+							<div class="content__event event">
+								<div class="event__genre">
+									Мероприятия
+								</div>
+								<a href="#" class="event__title">
+									III этап «Кубок России – Ростелеком» - Открытый кубок Свердловской области по
+									фигурному катанию на коньках, г.Екатеринбург, 27 - 31 октября 2015 года
+								</a>
+								<div class="event__date">
+									31.10.2015
+								</div>
+								<div class="event__text">
+									<p>По разряду «КМС»:</p>
+									<p>Кузнецов Иван – 20 место;</p>
+									<p>Миронова Елена – 13 место.</p>
+									<p>По разряду «КМС, парное катание»:</p>
+									<p>Старикова Ольга/Харитонов Владислав – 11 место.</p>
+								</div>
+							</div>
+							<div class="content__event event">
+								<div class="event__genre">
+									Мероприятия
+								</div>
+								<a href="#" class="event__title">
+									II этап открытого Первенства Свердловской области по фигурному катанию на коньках,
+									г.Екатеринбург, 21 - 23 октября 2015 года
+								</a>
+								<div class="event__date">
+									31.10.2015
+								</div>
+								<div class="event__text">
+									<p>По разряду «3 юношеский»:</p>
+									<p>Султангареева Юлия – 2 место;</p>
+									<p>Тарасова Виктория – 12 место;</p>
+									<p>Шенаурина Екатерина – 14 место;</p>
+									<p>Сухова Елизавета – 19 место.</p>
+								</div>
+							</div>
+							<div class="content__event event">
+								<div class="event__genre">
+									Мероприятия
+								</div>
+								<a href="#" class="event__title">
+									II этап «Кубок России – Ростелеком» - Открытый Кубок Республики Марий Эл по
+									фигурному катанию на коньках, г. Йошкар-Ола, 8 - 12 октября 2015 года
+								</a>
+								<div class="event__date">
+									31.10.2015
+								</div>
+								<div class="event__text">
+									<p>По разряду «КМС»:</p>
+									<p>Новичонок Виктория – 18 место.</p>
+									<p>По разряду «КМС, парное катание»:</p>
+									<p>Старикова Ольга /Харитонов Владислав – 8 место.</p>
+								</div>
+							</div>
+							<div class="content__event event">
+								<div class="event__genre">
+									Мероприятия
+								</div>
+								<a href="#" class="event__title">
+									Открытое личное Первенство МАОУ ДОД СДЮСШОР «Прибой» по фигурному катанию на
+									коньках, г. Тюмень, 1 - 2 октября 2015 года
+								</a>
+								<div class="event__date">
+									31.10.2015
+								</div>
+								<div class="event__text">
+									<p>По разряду «3 юношеский»:</p>
+									<p>Антоненко Виктория – 2 место;</p>
+									<p>Чиркова Диана – 3 место;</p>
+									<p>Мезенцева Полина – 5 место.</p>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="content__pagination pagination">
+						<a href="#" class="pagination__left-arrow pagination__arrow"></a>
+						<div class="pagination__state">
+							1 из 9
+						</div>
+						<a href="#" class="pagination__right-arrow pagination__arrow"></a>
 					</div>
 				</div>
 			</div>
