--- a/article.html
+++ b/article.html
@@ -194,7 +194,7 @@
 			</div>
 		</div>
 		<main class="main main-subordinate">
-			<div class="top">
+			<div class="top top-article">
 				<div class="container">
 					<div class="top__body">
 						<div class="top__title title">
@@ -207,6 +207,10 @@
 							<span> / </span>
 							<a href="list.html" class="top__link">
 								Новости
+							</a>
+							<span> / </span>
+							<a href="article.html" class="top__link">
+								Госуслуги стали доступнее
 							</a>
 						</div>
 					</div>
@@ -281,111 +285,103 @@
 								</ul>
 							</nav>
 						</aside>
-						<div class="content__main">
+						<div class="content__main content__main-article">
 							<div class="content__event event">
 								<div class="event__genre">
 									Новости
 								</div>
-								<a href="article.html" class="event__title">
+								<a href="#" class="event__title">
 									Госуслуги стали доступнее
 								</a>
 								<div class="event__date">
 									22.11.2018 18:02:40
 								</div>
-								<div class="event__text">
-									В едином каталоге можно заказать любую услугу, что теперь доступно не только обычным
-									пользователям, но также юридическим лицам и предпринимателям. Причем, мобильная
-									версия портала поможет воспользоваться его возможностями со смартфонов и планшетов.
-									Через личный кабинет предприниматели или юридические лица могут заказать электронные
-									услуги для бизнеса, оплачивать налоги и госпошлины, добавлять сотрудников и
-									информацию о транспортных средствах. А в личном кабинете для юридических лиц и
-									предпринимателей появились обновления: теперь там отображается важная для бизнеса
-									информация о реквизитах, филиалах, сотрудниках, корпоративном транспорте и проверках
-									контрольно-надзорных органов.
+								<div class="event__text event__text-article">
+									<p>
+										В едином каталоге можно заказать любую услугу, что теперь доступно не только
+										обычным пользователям, но также юридическим лицам и предпринимателям. Причем,
+										мобильная версия портала поможет воспользоваться его возможностями со смартфонов
+										и планшетов.
+									</p>
+									<p>
+										Через личный кабинет предприниматели или юридические лица могут заказать
+										электронные
+										услуги для бизнеса, оплачивать налоги и госпошлины, добавлять сотрудников и
+										информацию о транспортных средствах. А в личном кабинете для юридических лиц и
+										предпринимателей появились обновления: теперь там отображается важная для
+										бизнеса
+										информация о реквизитах, филиалах, сотрудниках, корпоративном транспорте и
+										проверках
+										контрольно-надзорных органов.
+									</p>
+									<p>
+										Чтобы быстро посмотреть уведомления о статусе получения услуги, можно кликнуть
+										по
+										названию организации в правом верхнем углу страницы. Появится меню с основной
+										информацией из личного кабинета. Это удобно, когда ждешь ответ по заявлению или
+										записи на прием.
+									</p>
+									<p>
+										Новая версия личного кабинета адаптирована для мобильных устройств. Раньше блоки
+										не
+										всегда отображались корректно, но теперь следить за уведомлениями, проверять
+										информацию и искать реквизиты можно даже с телефона. Чтобы моментально получить
+										реквизиты компании или узнать о результатах проверки, не нужен доступ к
+										компьютеру.
+									</p>
+									<p>
+										В личном кабинете есть блок «Контрольно-надзорная деятельность». В нем
+										появляется
+										информация о прошедших, текущих и предстоящих проверках. Это поможет
+										руководителям и
+										предпринимателям вовремя узнать о них и заранее подготовиться. Результаты
+										проверок
+										позволят исправить недочеты, чтобы исключить их в будущем и избежать штрафов.
+									</p>
+									<p>
+										Руководители организаций могут выдавать сотрудникам права на выполнение
+										определенных
+										действий в личном кабинете. Например, для редактирования информации о компании,
+										управления другими сотрудниками или подготовки заявлений. Для этого руководителю
+										нужно назначить сотрудника на роль администратора или уполномоченного на
+										создание
+										черновиков заявлений.
+									</p>
+									<p>
+										В разделе «Экономика и антимонопольный контроль» представители юридических лиц
+										могут
+										получить разъяснения по применению антимонопольного законодательства, о
+										нарушениях
+										антимонопольного законодательства в Российской Федерации, а также подать
+										заявление о
+										постановке организации на учет в Росфинмониторинге.
+									</p>
+									<p>
+										Напоминаем, что зарегистрироваться на портале, восстановить пароль, подтвердить
+										учетную запись можно в любом из офисов МАУ «МФЦ города Челябинска» по адресам:
+									</p>
+									<p>
+									<ul>
+										<li>Ул. Труда, 164;</li>
+										<li>Ул. Комарова, 39;</li>
+										<li>Ул. Новороссийская, 118В;</li>
+										<li>Пр. Победы, д. 39Б/1.</li>
+									</ul>
+									</p>
+									<p>
+										Также свои данные можно подтвердить в специализированных центрах обслуживания
+										граждан: отделы ЗАГС Администрации города Челябинска; УСЗН Администрации города
+										Челябинска; отделения ПАО «Ростелеком»; отделения ФГУП «Почта России»;
+										Государственный комитет по делам ЗАГС Челябинской области.
+									</p>
 								</div>
-							</div>
-							<div class="content__event event">
-								<div class="event__genre">
-									Мероприятия
-								</div>
-								<a href="article.html" class="event__title">
-									III этап «Кубок России – Ростелеком» - Открытый кубок Свердловской области по
-									фигурному катанию на коньках, г.Екатеринбург, 27 - 31 октября 2015 года
-								</a>
-								<div class="event__date">
-									31.10.2015
-								</div>
-								<div class="event__text">
-									<p>По разряду «КМС»:</p>
-									<p>Кузнецов Иван – 20 место;</p>
-									<p>Миронова Елена – 13 место.</p>
-									<p>По разряду «КМС, парное катание»:</p>
-									<p>Старикова Ольга/Харитонов Владислав – 11 место.</p>
-								</div>
-							</div>
-							<div class="content__event event">
-								<div class="event__genre">
-									Мероприятия
-								</div>
-								<a href="article.html" class="event__title">
-									II этап открытого Первенства Свердловской области по фигурному катанию на коньках,
-									г.Екатеринбург, 21 - 23 октября 2015 года
-								</a>
-								<div class="event__date">
-									31.10.2015
-								</div>
-								<div class="event__text">
-									<p>По разряду «3 юношеский»:</p>
-									<p>Султангареева Юлия – 2 место;</p>
-									<p>Тарасова Виктория – 12 место;</p>
-									<p>Шенаурина Екатерина – 14 место;</p>
-									<p>Сухова Елизавета – 19 место.</p>
-								</div>
-							</div>
-							<div class="content__event event">
-								<div class="event__genre">
-									Мероприятия
-								</div>
-								<a href="article.html" class="event__title">
-									II этап «Кубок России – Ростелеком» - Открытый Кубок Республики Марий Эл по
-									фигурному катанию на коньках, г. Йошкар-Ола, 8 - 12 октября 2015 года
-								</a>
-								<div class="event__date">
-									31.10.2015
-								</div>
-								<div class="event__text">
-									<p>По разряду «КМС»:</p>
-									<p>Новичонок Виктория – 18 место.</p>
-									<p>По разряду «КМС, парное катание»:</p>
-									<p>Старикова Ольга /Харитонов Владислав – 8 место.</p>
-								</div>
-							</div>
-							<div class="content__event event">
-								<div class="event__genre">
-									Мероприятия
-								</div>
-								<a href="article.html" class="event__title">
-									Открытое личное Первенство МАОУ ДОД СДЮСШОР «Прибой» по фигурному катанию на
-									коньках, г. Тюмень, 1 - 2 октября 2015 года
-								</a>
-								<div class="event__date">
-									31.10.2015
-								</div>
-								<div class="event__text">
-									<p>По разряду «3 юношеский»:</p>
-									<p>Антоненко Виктория – 2 место;</p>
-									<p>Чиркова Диана – 3 место;</p>
-									<p>Мезенцева Полина – 5 место.</p>
+								<div class="event__back-button-container">
+									<a href="list.html" class="event__back-button">
+										<span>Вернуться</span> к списку новостей
+									</a>
 								</div>
 							</div>
 						</div>
-					</div>
-					<div class="content__pagination pagination">
-						<a href="#" class="pagination__left-arrow pagination__arrow"></a>
-						<div class="pagination__state">
-							1 из 9
-						</div>
-						<a href="#" class="pagination__right-arrow pagination__arrow"></a>
 					</div>
 				</div>
 			</div>
