--- a/gallery.html
+++ b/gallery.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset="UTF-8" />
-	<meta name="viewport" content="width=device-width">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
 	<meta name="description" content="" />
 	<meta name="keywords" content="" />
 	<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
@@ -216,10 +216,8 @@
 				<div class="container">
 					<div class="gallery__body">
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/01.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -227,32 +225,26 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
-								<img src="img/gallery/02.jpg" alt="">
+								<a href="#" class="gallery__image-hover"></a>
+								<img src="img/gallery/test-high.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
 								Встреча с олимпийским огнем
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
-								<img src="img/gallery/03.jpg" alt="">
+								<a href="#" class="gallery__image-hover"></a>
+								<img src="img/gallery/test-small.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
 								Команда синхронного катания "Айсберг"
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/04.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -260,10 +252,8 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/05.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -271,10 +261,8 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/06.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -282,10 +270,8 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/07.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -293,10 +279,8 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/08.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
@@ -304,10 +288,8 @@
 							</a>
 						</div>
 						<div class="gallery__item">
-							<div class="gallery__item-hover">
-								<img src="img/gallery/watch.svg" alt="">
-							</div>
 							<div class="gallery__image">
+								<a href="#" class="gallery__image-hover"></a>
 								<img src="img/gallery/09.jpg" alt="">
 							</div>
 							<a href="set.html" class="gallery__link">
